crates/fig-parser/tests/snapshots/integration_tests__using__simple.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - std
          - io
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - core
          - memory
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - core
          - iter
